src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMERO

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> DOCTYPE docBook
Rule 2     docBook -> OPART articulo CLART
Rule 3     articulo -> info genArt
Rule 4     articulo -> title genArt
Rule 5     articulo -> info title genArt
Rule 6     articulo -> genArt
Rule 7     articulo -> info genArt simpleSec
Rule 8     articulo -> title genArt simpleSec
Rule 9     articulo -> info title genArt simpleSec
Rule 10    articulo -> genArt simpleSec
Rule 11    articulo -> info genArt section
Rule 12    articulo -> info section
Rule 13    articulo -> title genArt section
Rule 14    articulo -> info title genArt section
Rule 15    articulo -> genArt section
Rule 16    genArt -> itemizedList
Rule 17    genArt -> important
Rule 18    genArt -> para
Rule 19    genArt -> simpara
Rule 20    genArt -> address
Rule 21    genArt -> informalTable
Rule 22    genArt -> comment
Rule 23    genArt -> abstract
Rule 24    genArt -> itemizedList genArt
Rule 25    genArt -> important genArt
Rule 26    genArt -> para genArt
Rule 27    genArt -> simpara genArt
Rule 28    genArt -> address genArt
Rule 29    genArt -> informalTable genArt
Rule 30    genArt -> comment genArt
Rule 31    genArt -> abstract genArt
Rule 32    section -> OPSECT info genSect1 CLSECT
Rule 33    section -> OPSECT title genSect1 CLSECT
Rule 34    section -> OPSECT info title genSect1 CLSECT
Rule 35    section -> OPSECT genSect1 CLSECT
Rule 36    section -> OPSECT info genSect1 genSect2 CLSECT
Rule 37    section -> OPSECT title genSect1 genSect2 CLSECT
Rule 38    section -> OPSECT info title genSect1 genSect2 CLSECT
Rule 39    section -> OPSECT genSect1 genSect2 CLSECT
Rule 40    section -> OPSECT info genSect1 genSect3 CLSECT
Rule 41    section -> OPSECT title genSect1 genSect3 CLSECT
Rule 42    section -> OPSECT info title genSect1 genSect3 CLSECT
Rule 43    section -> OPSECT genSect1 genSect3 CLSECT
Rule 44    genSect1 -> itemizedList
Rule 45    genSect1 -> important
Rule 46    genSect1 -> para
Rule 47    genSect1 -> simpara
Rule 48    genSect1 -> address
Rule 49    genSect1 -> mediaObject
Rule 50    genSect1 -> informalTable
Rule 51    genSect1 -> comment
Rule 52    genSect1 -> abstract
Rule 53    genSect1 -> itemizedList genSect1
Rule 54    genSect1 -> important genSect1
Rule 55    genSect1 -> para genSect1
Rule 56    genSect1 -> simpara genSect1
Rule 57    genSect1 -> address genSect1
Rule 58    genSect1 -> mediaObject genSect1
Rule 59    genSect1 -> informalTable genSect1
Rule 60    genSect1 -> comment genSect1
Rule 61    genSect1 -> abstract genSect1
Rule 62    genSect2 -> simpleSec
Rule 63    genSect2 -> simpleSec genSect2
Rule 64    genSect3 -> section
Rule 65    genSect3 -> section genSect3
Rule 66    simpleSec -> OPSSECT info genSSect CLSSECT
Rule 67    simpleSec -> OPSSECT title genSSect CLSSECT
Rule 68    simpleSec -> OPSSECT info title genSSect CLSSECT
Rule 69    simpleSec -> OPSSECT genSSect CLSSECT
Rule 70    genSSect -> itemizedList
Rule 71    genSSect -> important
Rule 72    genSSect -> para
Rule 73    genSSect -> simpara
Rule 74    genSSect -> address
Rule 75    genSSect -> mediaObject
Rule 76    genSSect -> informalTable
Rule 77    genSSect -> comment
Rule 78    genSSect -> abstract
Rule 79    genSSect -> itemizedList genSSect
Rule 80    genSSect -> important genSSect
Rule 81    genSSect -> para genSSect
Rule 82    genSSect -> simpara genSSect
Rule 83    genSSect -> address genSSect
Rule 84    genSSect -> mediaObject genSSect
Rule 85    genSSect -> informalTable genSSect
Rule 86    genSSect -> comment genSSect
Rule 87    genSSect -> abstract genSSect
Rule 88    geninfo -> title
Rule 89    geninfo -> abstract
Rule 90    geninfo -> address
Rule 91    geninfo -> author
Rule 92    geninfo -> date
Rule 93    geninfo -> copyright
Rule 94    geninfo -> mediaObject
Rule 95    geninfo -> mediaObject geninfo
Rule 96    geninfo -> abstract geninfo
Rule 97    geninfo -> address geninfo
Rule 98    geninfo -> author geninfo
Rule 99    geninfo -> date geninfo
Rule 100   geninfo -> copyright geninfo
Rule 101   geninfo -> title geninfo
Rule 102   info -> OPINFO geninfo CLINFO
Rule 103   abstract -> OPABST title genAbstr CLABST
Rule 104   abstract -> OPABST genAbstr CLABST
Rule 105   genAbstr -> para
Rule 106   genAbstr -> simpara
Rule 107   genAbstr -> para genAbstr
Rule 108   genAbstr -> simpara genAbstr
Rule 109   address -> OPADD CLADD
Rule 110   address -> OPADD genAdd CLADD
Rule 111   genAdd -> TEXTO
Rule 112   genAdd -> street
Rule 113   genAdd -> city
Rule 114   genAdd -> state
Rule 115   genAdd -> phone
Rule 116   genAdd -> email
Rule 117   genAdd -> TEXTO genAdd
Rule 118   genAdd -> street genAdd
Rule 119   genAdd -> city genAdd
Rule 120   genAdd -> state genAdd
Rule 121   genAdd -> phone genAdd
Rule 122   genAdd -> email genAdd
Rule 123   author -> OPAUTHOR genauthor CLAUTHOR
Rule 124   genauthor -> firstName
Rule 125   genauthor -> surName
Rule 126   genauthor -> firstName genauthor
Rule 127   genauthor -> surName genauthor
Rule 128   copyright -> OPCOPY genCopy1 CLCOPY
Rule 129   copyright -> OPCOPY genCopy1 genCopy2 CLCOPY
Rule 130   genCopy1 -> year
Rule 131   genCopy1 -> year genCopy1
Rule 132   genCopy2 -> holder
Rule 133   genCopy2 -> holder genCopy2
Rule 134   title -> OPTIT gentitle CLTIT
Rule 135   gentitle -> TEXTO
Rule 136   gentitle -> emphasis
Rule 137   gentitle -> link
Rule 138   gentitle -> email
Rule 139   gentitle -> TEXTO gentitle
Rule 140   gentitle -> emphasis gentitle
Rule 141   gentitle -> link gentitle
Rule 142   gentitle -> email gentitle
Rule 143   simpara -> OPSPARA genSpara CLSPARA
Rule 144   genSpara -> TEXTO
Rule 145   genSpara -> emphasis
Rule 146   genSpara -> link
Rule 147   genSpara -> email
Rule 148   genSpara -> author
Rule 149   genSpara -> comment
Rule 150   genSpara -> TEXTO genSpara
Rule 151   genSpara -> emphasis genSpara
Rule 152   genSpara -> link genSpara
Rule 153   genSpara -> email genSpara
Rule 154   genSpara -> author genSpara
Rule 155   genSpara -> comment genSpara
Rule 156   emphasis -> OPEMPH genEmp CLEMPH
Rule 157   genEmp -> TEXTO
Rule 158   genEmp -> emphasis
Rule 159   genEmp -> link
Rule 160   genEmp -> email
Rule 161   genEmp -> author
Rule 162   genEmp -> comment
Rule 163   genEmp -> TEXTO genEmp
Rule 164   genEmp -> emphasis genEmp
Rule 165   genEmp -> link genEmp
Rule 166   genEmp -> email genEmp
Rule 167   genEmp -> author genEmp
Rule 168   genEmp -> comment genEmp
Rule 169   comment -> OPCOM genCom CLCOM
Rule 170   genCom -> TEXTO
Rule 171   genCom -> emphasis
Rule 172   genCom -> link
Rule 173   genCom -> email
Rule 174   genCom -> author
Rule 175   genCom -> comment
Rule 176   genCom -> TEXTO genCom
Rule 177   genCom -> emphasis genCom
Rule 178   genCom -> link genCom
Rule 179   genCom -> email genCom
Rule 180   genCom -> author genCom
Rule 181   genCom -> comment genCom
Rule 182   link -> OPLINK genlink CLLINK
Rule 183   genlink -> TEXTO
Rule 184   genlink -> emphasis
Rule 185   genlink -> link
Rule 186   genlink -> email
Rule 187   genlink -> author
Rule 188   genlink -> comment
Rule 189   genlink -> TEXTO genlink
Rule 190   genlink -> emphasis genlink
Rule 191   genlink -> link genlink
Rule 192   genlink -> email genlink
Rule 193   genlink -> author genlink
Rule 194   genlink -> comment genlink
Rule 195   para -> OPPARA genpara CLPARA
Rule 196   genpara -> TEXTO
Rule 197   genpara -> emphasis
Rule 198   genpara -> link
Rule 199   genpara -> email
Rule 200   genpara -> author
Rule 201   genpara -> comment
Rule 202   genpara -> itemizedList
Rule 203   genpara -> important
Rule 204   genpara -> address
Rule 205   genpara -> mediaObject
Rule 206   genpara -> informalTable
Rule 207   genpara -> TEXTO genpara
Rule 208   genpara -> emphasis genpara
Rule 209   genpara -> link genpara
Rule 210   genpara -> email genpara
Rule 211   genpara -> author genpara
Rule 212   genpara -> comment genpara
Rule 213   genpara -> itemizedList genpara
Rule 214   genpara -> important genpara
Rule 215   genpara -> address genpara
Rule 216   genpara -> mediaObject genpara
Rule 217   genpara -> informalTable genpara
Rule 218   important -> OPIMPORT title genImport CLIMPORT
Rule 219   important -> OPIMPORT genImport CLIMPORT
Rule 220   genImport -> itemizedList
Rule 221   genImport -> important
Rule 222   genImport -> para
Rule 223   genImport -> simpara
Rule 224   genImport -> address
Rule 225   genImport -> mediaObject
Rule 226   genImport -> informalTable
Rule 227   genImport -> comment
Rule 228   genImport -> abstract
Rule 229   genImport -> itemizedList genImport
Rule 230   genImport -> important genImport
Rule 231   genImport -> para genImport
Rule 232   genImport -> simpara genImport
Rule 233   genImport -> address genImport
Rule 234   genImport -> mediaObject genImport
Rule 235   genImport -> informalTable genImport
Rule 236   genImport -> comment genImport
Rule 237   genImport -> abstract genImport
Rule 238   firstName -> OPFNAME genFN CLFNAME
Rule 239   genFN -> TEXTO
Rule 240   genFN -> link
Rule 241   genFN -> emphasis
Rule 242   genFN -> comment
Rule 243   genFN -> TEXTO genFN
Rule 244   genFN -> link genFN
Rule 245   genFN -> emphasis genFN
Rule 246   genFN -> comment genFN
Rule 247   surName -> OPSNAME genSN CLSMANE
Rule 248   genSN -> TEXTO
Rule 249   genSN -> link
Rule 250   genSN -> emphasis
Rule 251   genSN -> comment
Rule 252   genSN -> TEXTO genSN
Rule 253   genSN -> link genSN
Rule 254   genSN -> emphasis genSN
Rule 255   genSN -> comment genSN
Rule 256   street -> OPSTREET genstreet CLSTREET
Rule 257   genstreet -> TEXTO
Rule 258   genstreet -> link
Rule 259   genstreet -> emphasis
Rule 260   genstreet -> comment
Rule 261   genstreet -> TEXTO genstreet
Rule 262   genstreet -> link genstreet
Rule 263   genstreet -> emphasis genstreet
Rule 264   genstreet -> comment genstreet
Rule 265   city -> OPCITY gencity CLCITY
Rule 266   gencity -> TEXTO
Rule 267   gencity -> link
Rule 268   gencity -> emphasis
Rule 269   gencity -> comment
Rule 270   gencity -> TEXTO gencity
Rule 271   gencity -> link gencity
Rule 272   gencity -> emphasis gencity
Rule 273   gencity -> comment gencity
Rule 274   state -> OPSTATE genSate CLSTATE
Rule 275   genSate -> TEXTO
Rule 276   genSate -> link
Rule 277   genSate -> emphasis
Rule 278   genSate -> comment
Rule 279   genSate -> TEXTO genSate
Rule 280   genSate -> link genSate
Rule 281   genSate -> emphasis genSate
Rule 282   genSate -> comment genSate
Rule 283   phone -> OPPHONE genphone CLPHONE
Rule 284   genphone -> TEXTO
Rule 285   genphone -> link
Rule 286   genphone -> emphasis
Rule 287   genphone -> comment
Rule 288   genphone -> TEXTO genphone
Rule 289   genphone -> link genphone
Rule 290   genphone -> emphasis genphone
Rule 291   genphone -> comment genphone
Rule 292   email -> OPEMAIL genemail CLEMAIL
Rule 293   genemail -> TEXTO
Rule 294   genemail -> link
Rule 295   genemail -> emphasis
Rule 296   genemail -> comment
Rule 297   genemail -> TEXTO genemail
Rule 298   genemail -> link genemail
Rule 299   genemail -> emphasis genemail
Rule 300   genemail -> comment genemail
Rule 301   date -> OPDATE gendate CLDATE
Rule 302   gendate -> TEXTO
Rule 303   gendate -> link
Rule 304   gendate -> emphasis
Rule 305   gendate -> comment
Rule 306   gendate -> TEXTO gendate
Rule 307   gendate -> link gendate
Rule 308   gendate -> emphasis gendate
Rule 309   gendate -> comment gendate
Rule 310   year -> OPYEAR genyear CLYEAR
Rule 311   genyear -> TEXTO
Rule 312   genyear -> link
Rule 313   genyear -> emphasis
Rule 314   genyear -> comment
Rule 315   genyear -> TEXTO genyear
Rule 316   genyear -> link genyear
Rule 317   genyear -> emphasis genyear
Rule 318   genyear -> comment genyear
Rule 319   holder -> OPHOLDER genholder CLHOLDER
Rule 320   genholder -> TEXTO
Rule 321   genholder -> link
Rule 322   genholder -> emphasis
Rule 323   genholder -> comment
Rule 324   genholder -> TEXTO genholder
Rule 325   genholder -> link genholder
Rule 326   genholder -> emphasis genholder
Rule 327   genholder -> comment genholder
Rule 328   mediaObject -> OPMOBJ info videoObject CLMOBJ
Rule 329   mediaObject -> OPMOBJ info imageObject CLMOBJ
Rule 330   mediaObject -> OPMOBJ videoObject CLMOBJ
Rule 331   mediaObject -> OPMOBJ imageObject CLMOBJ
Rule 332   mediaObject -> OPMOBJ info videoObject genMO CLMOBJ
Rule 333   mediaObject -> OPMOBJ info imageObject genMO CLMOBJ
Rule 334   mediaObject -> OPMOBJ videoObject genMO CLMOBJ
Rule 335   mediaObject -> OPMOBJ imageObject genMO CLMOBJ
Rule 336   genMO -> videoObject
Rule 337   genMO -> imageObject
Rule 338   genMO -> videoObject genMO
Rule 339   genMO -> imageObject genMO
Rule 340   itemizedList -> OPILIST genIList CLILIST
Rule 341   genIList -> listItem
Rule 342   genIList -> listItem genIList
Rule 343   videoObject -> OPVOBJ VIDAT CLVOBJ
Rule 344   videoObject -> OPVOBJ info VIDAT CLVOBJ
Rule 345   imageObject -> OPIMOBJ IMDATA CLIMOBJ
Rule 346   imageObject -> OPIMOBJ info IMDATA CLIMOBJ
Rule 347   listItem -> OPLITEM genlistItem CLLITEM
Rule 348   genlistItem -> itemizedList
Rule 349   genlistItem -> important
Rule 350   genlistItem -> para
Rule 351   genlistItem -> simpara
Rule 352   genlistItem -> address
Rule 353   genlistItem -> mediaObject
Rule 354   genlistItem -> informalTable
Rule 355   genlistItem -> comment
Rule 356   genlistItem -> abstract
Rule 357   genlistItem -> itemizedList genlistItem
Rule 358   genlistItem -> important genlistItem
Rule 359   genlistItem -> para genlistItem
Rule 360   genlistItem -> simpara genlistItem
Rule 361   genlistItem -> address genlistItem
Rule 362   genlistItem -> mediaObject genlistItem
Rule 363   genlistItem -> informalTable genlistItem
Rule 364   genlistItem -> comment genlistItem
Rule 365   genlistItem -> abstract genlistItem
Rule 366   informalTable -> OPINTAB genIT1 CLINTAB
Rule 367   informalTable -> OPINTAB genIT2 CLINTAB
Rule 368   genIT1 -> address
Rule 369   genIT1 -> address genIT1
Rule 370   genIT2 -> tGroup
Rule 371   genIT2 -> tGroup genIT2
Rule 372   tGroup -> OPTGROUP thead CLTGROUP
Rule 373   tGroup -> OPTGROUP tfoot CLTGROUP
Rule 374   tGroup -> OPTGROUP tbody CLTGROUP
Rule 375   thead -> OPHEAD genHFB CLHEAD
Rule 376   tfoot -> OPFOOT genHFB CLFOOT
Rule 377   tbody -> OPBODY genHFB CLBODY
Rule 378   genHFB -> row
Rule 379   genHFB -> row genHFB
Rule 380   row -> OPROW genrow CLROW
Rule 381   genrow -> entry
Rule 382   genrow -> entry genrow
Rule 383   entry -> OPENTRY genentry CLENTRY
Rule 384   genentry -> TEXTO
Rule 385   genentry -> itemizedList
Rule 386   genentry -> important
Rule 387   genentry -> para
Rule 388   genentry -> simpara
Rule 389   genentry -> address
Rule 390   genentry -> comment
Rule 391   genentry -> abstract
Rule 392   genentry -> TEXTO genentry
Rule 393   genentry -> itemizedList genentry
Rule 394   genentry -> important genentry
Rule 395   genentry -> para genentry
Rule 396   genentry -> simpara genentry
Rule 397   genentry -> address genentry
Rule 398   genentry -> comment genentry
Rule 399   genentry -> abstract genentry

Terminals, with rules where they appear

CLABST               : 103 104
CLADD                : 109 110
CLART                : 2
CLAUTHOR             : 123
CLBODY               : 377
CLCITY               : 265
CLCOM                : 169
CLCOPY               : 128 129
CLDATE               : 301
CLEMAIL              : 292
CLEMPH               : 156
CLENTRY              : 383
CLFNAME              : 238
CLFOOT               : 376
CLHEAD               : 375
CLHOLDER             : 319
CLILIST              : 340
CLIMOBJ              : 345 346
CLIMPORT             : 218 219
CLINFO               : 102
CLINTAB              : 366 367
CLLINK               : 182
CLLITEM              : 347
CLMOBJ               : 328 329 330 331 332 333 334 335
CLPARA               : 195
CLPHONE              : 283
CLROW                : 380
CLSECT               : 32 33 34 35 36 37 38 39 40 41 42 43
CLSMANE              : 247
CLSPARA              : 143
CLSSECT              : 66 67 68 69
CLSTATE              : 274
CLSTREET             : 256
CLTGROUP             : 372 373 374
CLTIT                : 134
CLVOBJ               : 343 344
CLYEAR               : 310
DOCTYPE              : 1
IMDATA               : 345 346
NUMERO               : 
OPABST               : 103 104
OPADD                : 109 110
OPART                : 2
OPAUTHOR             : 123
OPBODY               : 377
OPCITY               : 265
OPCOM                : 169
OPCOPY               : 128 129
OPDATE               : 301
OPEMAIL              : 292
OPEMPH               : 156
OPENTRY              : 383
OPFNAME              : 238
OPFOOT               : 376
OPHEAD               : 375
OPHOLDER             : 319
OPILIST              : 340
OPIMOBJ              : 345 346
OPIMPORT             : 218 219
OPINFO               : 102
OPINTAB              : 366 367
OPLINK               : 182
OPLITEM              : 347
OPMOBJ               : 328 329 330 331 332 333 334 335
OPPARA               : 195
OPPHONE              : 283
OPROW                : 380
OPSECT               : 32 33 34 35 36 37 38 39 40 41 42 43
OPSNAME              : 247
OPSPARA              : 143
OPSSECT              : 66 67 68 69
OPSTATE              : 274
OPSTREET             : 256
OPTGROUP             : 372 373 374
OPTIT                : 134
OPVOBJ               : 343 344
OPYEAR               : 310
TEXTO                : 111 117 135 139 144 150 157 163 170 176 183 189 196 207 239 243 248 252 257 261 266 270 275 279 284 288 293 297 302 306 311 315 320 324 384 392
VIDAT                : 343 344
error                : 

Nonterminals, with rules where they appear

abstract             : 23 31 52 61 78 87 89 96 228 237 356 365 391 399
address              : 20 28 48 57 74 83 90 97 204 215 224 233 352 361 368 369 389 397
articulo             : 2
author               : 91 98 148 154 161 167 174 180 187 193 200 211
city                 : 113 119
comment              : 22 30 51 60 77 86 149 155 162 168 175 181 188 194 201 212 227 236 242 246 251 255 260 264 269 273 278 282 287 291 296 300 305 309 314 318 323 327 355 364 390 398
copyright            : 93 100
date                 : 92 99
docBook              : 1
email                : 116 122 138 142 147 153 160 166 173 179 186 192 199 210
emphasis             : 136 140 145 151 158 164 171 177 184 190 197 208 241 245 250 254 259 263 268 272 277 281 286 290 295 299 304 308 313 317 322 326
entry                : 381 382
firstName            : 124 126
genAbstr             : 103 104 107 108
genAdd               : 110 117 118 119 120 121 122
genArt               : 3 4 5 6 7 8 9 10 11 13 14 15 24 25 26 27 28 29 30 31
genCom               : 169 176 177 178 179 180 181
genCopy1             : 128 129 131
genCopy2             : 129 133
genEmp               : 156 163 164 165 166 167 168
genFN                : 238 243 244 245 246
genHFB               : 375 376 377 379
genIList             : 340 342
genIT1               : 366 369
genIT2               : 367 371
genImport            : 218 219 229 230 231 232 233 234 235 236 237
genMO                : 332 333 334 335 338 339
genSN                : 247 252 253 254 255
genSSect             : 66 67 68 69 79 80 81 82 83 84 85 86 87
genSate              : 274 279 280 281 282
genSect1             : 32 33 34 35 36 37 38 39 40 41 42 43 53 54 55 56 57 58 59 60 61
genSect2             : 36 37 38 39 63
genSect3             : 40 41 42 43 65
genSpara             : 143 150 151 152 153 154 155
genauthor            : 123 126 127
gencity              : 265 270 271 272 273
gendate              : 301 306 307 308 309
genemail             : 292 297 298 299 300
genentry             : 383 392 393 394 395 396 397 398 399
genholder            : 319 324 325 326 327
geninfo              : 95 96 97 98 99 100 101 102
genlink              : 182 189 190 191 192 193 194
genlistItem          : 347 357 358 359 360 361 362 363 364 365
genpara              : 195 207 208 209 210 211 212 213 214 215 216 217
genphone             : 283 288 289 290 291
genrow               : 380 382
genstreet            : 256 261 262 263 264
gentitle             : 134 139 140 141 142
genyear              : 310 315 316 317 318
holder               : 132 133
imageObject          : 329 331 333 335 337 339
important            : 17 25 45 54 71 80 203 214 221 230 349 358 386 394
info                 : 3 5 7 9 11 12 14 32 34 36 38 40 42 66 68 328 329 332 333 344 346
informalTable        : 21 29 50 59 76 85 206 217 226 235 354 363
itemizedList         : 16 24 44 53 70 79 202 213 220 229 348 357 385 393
link                 : 137 141 146 152 159 165 172 178 185 191 198 209 240 244 249 253 258 262 267 271 276 280 285 289 294 298 303 307 312 316 321 325
listItem             : 341 342
mediaObject          : 49 58 75 84 94 95 205 216 225 234 353 362
para                 : 18 26 46 55 72 81 105 107 222 231 350 359 387 395
phone                : 115 121
row                  : 378 379
section              : 11 12 13 14 15 64 65
sigma                : 0
simpara              : 19 27 47 56 73 82 106 108 223 232 351 360 388 396
simpleSec            : 7 8 9 10 62 63
state                : 114 120
street               : 112 118
surName              : 125 127
tGroup               : 370 371
tbody                : 374
tfoot                : 373
thead                : 372
title                : 4 5 8 9 13 14 33 34 37 38 41 42 67 68 88 101 103 218
videoObject          : 328 330 332 334 336 338
year                 : 130 131

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . DOCTYPE docBook

    DOCTYPE         shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> DOCTYPE . docBook
    (2) docBook -> . OPART articulo CLART

    OPART           shift and go to state 4

    docBook                        shift and go to state 3

state 3

    (1) sigma -> DOCTYPE docBook .

    $end            reduce using rule 1 (sigma -> DOCTYPE docBook .)


state 4

    (2) docBook -> OPART . articulo CLART
    (3) articulo -> . info genArt
    (4) articulo -> . title genArt
    (5) articulo -> . info title genArt
    (6) articulo -> . genArt
    (7) articulo -> . info genArt simpleSec
    (8) articulo -> . title genArt simpleSec
    (9) articulo -> . info title genArt simpleSec
    (10) articulo -> . genArt simpleSec
    (11) articulo -> . info genArt section
    (12) articulo -> . info section
    (13) articulo -> . title genArt section
    (14) articulo -> . info title genArt section
    (15) articulo -> . genArt section
    (102) info -> . OPINFO geninfo CLINFO
    (134) title -> . OPTIT gentitle CLTIT
    (16) genArt -> . itemizedList
    (17) genArt -> . important
    (18) genArt -> . para
    (19) genArt -> . simpara
    (20) genArt -> . address
    (21) genArt -> . informalTable
    (22) genArt -> . comment
    (23) genArt -> . abstract
    (24) genArt -> . itemizedList genArt
    (25) genArt -> . important genArt
    (26) genArt -> . para genArt
    (27) genArt -> . simpara genArt
    (28) genArt -> . address genArt
    (29) genArt -> . informalTable genArt
    (30) genArt -> . comment genArt
    (31) genArt -> . abstract genArt
    (340) itemizedList -> . OPILIST genIList CLILIST
    (218) important -> . OPIMPORT title genImport CLIMPORT
    (219) important -> . OPIMPORT genImport CLIMPORT
    (195) para -> . OPPARA genpara CLPARA
    (143) simpara -> . OPSPARA genSpara CLSPARA
    (109) address -> . OPADD CLADD
    (110) address -> . OPADD genAdd CLADD
    (366) informalTable -> . OPINTAB genIT1 CLINTAB
    (367) informalTable -> . OPINTAB genIT2 CLINTAB
    (169) comment -> . OPCOM genCom CLCOM
    (103) abstract -> . OPABST title genAbstr CLABST
    (104) abstract -> . OPABST genAbstr CLABST

    OPINFO          shift and go to state 9
    OPTIT           shift and go to state 10
    OPILIST         shift and go to state 19
    OPIMPORT        shift and go to state 20
    OPPARA          shift and go to state 21
    OPSPARA         shift and go to state 22
    OPADD           shift and go to state 23
    OPINTAB         shift and go to state 24
    OPCOM           shift and go to state 25
    OPABST          shift and go to state 26

    articulo                       shift and go to state 5
    info                           shift and go to state 6
    genArt                         shift and go to state 7
    title                          shift and go to state 8
    itemizedList                   shift and go to state 11
    important                      shift and go to state 12
    para                           shift and go to state 13
    simpara                        shift and go to state 14
    address                        shift and go to state 15
    informalTable                  shift and go to state 16
    comment                        shift and go to state 17
    abstract                       shift and go to state 18

state 5

    (2) docBook -> OPART articulo . CLART

    CLART           shift and go to state 27


state 6

    (3) articulo -> info . genArt
    (5) articulo -> info . title genArt
    (7) articulo -> info . genArt simpleSec
    (9) articulo -> info . title genArt simpleSec
    (11) articulo -> info . genArt section
    (12) articulo -> info . section
    (14) articulo -> info . title genArt section
    (16) genArt -> . itemizedList
    (17) genArt -> . important
    (18) genArt -> . para
    (19) genArt -> . simpara
    (20) genArt -> . address
    (21) genArt -> . informalTable
    (22) genArt -> . comment
    (23) genArt -> . abstract
    (24) genArt -> . itemizedList genArt
    (25) genArt -> . important genArt
    (26) genArt -> . para genArt
    (27) genArt -> . simpara genArt
    (28) genArt -> . address genArt
    (29) genArt -> . informalTable genArt
    (30) genArt -> . comment genArt
    (31) genArt -> . abstract genArt
    (134) title -> . OPTIT gentitle CLTIT
    (32) section -> . OPSECT info genSect1 CLSECT
    (33) section -> . OPSECT title genSect1 CLSECT
    (34) section -> . OPSECT info title genSect1 CLSECT
    (35) section -> . OPSECT genSect1 CLSECT
    (36) section -> . OPSECT info genSect1 genSect2 CLSECT
    (37) section -> . OPSECT title genSect1 genSect2 CLSECT
    (38) section -> . OPSECT info title genSect1 genSect2 CLSECT
    (39) section -> . OPSECT genSect1 genSect2 CLSECT
    (40) section -> . OPSECT info genSect1 genSect3 CLSECT
    (41) section -> . OPSECT title genSect1 genSect3 CLSECT
    (42) section -> . OPSECT info title genSect1 genSect3 CLSECT
    (43) section -> . OPSECT genSect1 genSect3 CLSECT
    (340) itemizedList -> . OPILIST genIList CLILIST
    (218) important -> . OPIMPORT title genImport CLIMPORT
    (219) important -> . OPIMPORT genImport CLIMPORT
    (195) para -> . OPPARA genpara CLPARA
    (143) simpara -> . OPSPARA genSpara CLSPARA
    (109) address -> . OPADD CLADD
    (110) address -> . OPADD genAdd CLADD
    (366) informalTable -> . OPINTAB genIT1 CLINTAB
    (367) informalTable -> . OPINTAB genIT2 CLINTAB
    (169) comment -> . OPCOM genCom CLCOM
    (103) abstract -> . OPABST title genAbstr CLABST
    (104) abstract -> . OPABST genAbstr CLABST

    OPTIT           shift and go to state 10
    OPSECT          shift and go to state 31
    OPILIST         shift and go to state 19
    OPIMPORT        shift and go to state 20
    OPPARA          shift and go to state 21
    OPSPARA         shift and go to state 22
    OPADD           shift and go to state 23
    OPINTAB         shift and go to state 24
    OPCOM           shift and go to state 25
    OPABST          shift and go to state 26

    genArt                         shift and go to state 28
    title                          shift and go to state 29
    section                        shift and go to state 30
    itemizedList                   shift and go to state 11
    important                      shift and go to state 12
    para                           shift and go to state 13
    simpara                        shift and go to state 14
    address                        shift and go to state 15
    informalTable                  shift and go to state 16
    comment                        shift and go to state 17
    abstract                       shift and go to state 18

state 7

    (6) articulo -> genArt .
    (10) articulo -> genArt . simpleSec
    (15) articulo -> genArt . section
    (66) simpleSec -> . OPSSECT info genSSect CLSSECT
    (67) simpleSec -> . OPSSECT title genSSect CLSSECT
    (68) simpleSec -> . OPSSECT info title genSSect CLSSECT
    (69) simpleSec -> . OPSSECT genSSect CLSSECT
    (32) section -> . OPSECT info genSect1 CLSECT
    (33) section -> . OPSECT title genSect1 CLSECT
    (34) section -> . OPSECT info title genSect1 CLSECT
    (35) section -> . OPSECT genSect1 CLSECT
    (36) section -> . OPSECT info genSect1 genSect2 CLSECT
    (37) section -> . OPSECT title genSect1 genSect2 CLSECT
    (38) section -> . OPSECT info title genSect1 genSect2 CLSECT
    (39) section -> . OPSECT genSect1 genSect2 CLSECT
    (40) section -> . OPSECT info genSect1 genSect3 CLSECT
    (41) section -> . OPSECT title genSect1 genSect3 CLSECT
    (42) section -> . OPSECT info title genSect1 genSect3 CLSECT
    (43) section -> . OPSECT genSect1 genSect3 CLSECT

    CLART           reduce using rule 6 (articulo -> genArt .)
    OPSSECT         shift and go to state 34
    OPSECT          shift and go to state 31

    simpleSec                      shift and go to state 32
    section                        shift and go to state 33

state 8

    (4) articulo -> title . genArt
    (8) articulo -> title . genArt simpleSec
    (13) articulo -> title . genArt section
    (16) genArt -> . itemizedList
    (17) genArt -> . important
    (18) genArt -> . para
    (19) genArt -> . simpara
    (20) genArt -> . address
    (21) genArt -> . informalTable
    (22) genArt -> . comment
    (23) genArt -> . abstract
    (24) genArt -> . itemizedList genArt
    (25) genArt -> . important genArt
    (26) genArt -> . para genArt
    (27) genArt -> . simpara genArt
    (28) genArt -> . address genArt
    (29) genArt -> . informalTable genArt
    (30) genArt -> . comment genArt
    (31) genArt -> . abstract genArt
    (340) itemizedList -> . OPILIST genIList CLILIST
    (218) important -> . OPIMPORT title genImport CLIMPORT
    (219) important -> . OPIMPORT genImport CLIMPORT
    (195) para -> . OPPARA genpara CLPARA
    (143) simpara -> . OPSPARA genSpara CLSPARA
    (109) address -> . OPADD CLADD
    (110) address -> . OPADD genAdd CLADD
    (366) informalTable -> . OPINTAB genIT1 CLINTAB
    (367) informalTable -> . OPINTAB genIT2 CLINTAB
    (169) comment -> . OPCOM genCom CLCOM
    (103) abstract -> . OPABST title genAbstr CLABST
    (104) abstract -> . OPABST genAbstr CLABST

    OPILIST         shift and go to state 19
    OPIMPORT        shift and go to state 20
    OPPARA          shift and go to state 21
    OPSPARA         shift and go to state 22
    OPADD           shift and go to state 23
    OPINTAB         shift and go to state 24
    OPCOM           shift and go to state 25
    OPABST          shift and go to state 26

    genArt                         shift and go to state 35
    itemizedList                   shift and go to state 11
    important                      shift and go to state 12
    para                           shift and go to state 13
    simpara                        shift and go to state 14
    address                        shift and go to state 15
    informalTable                  shift and go to state 16
    comment                        shift and go to state 17
    abstract                       shift and go to state 18

state 9

    (102) info -> OPINFO . geninfo CLINFO
    (88) geninfo -> . title
    (89) geninfo -> . abstract
    (90) geninfo -> . address
